// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`$rootScope.googleMapsApiKey [ng-disabled] [ng-model] [ng-readonly] 1`] = `
"
  <div class=\\"bm-location\\">
    <!-- ngIf: $ctrl.isEditing || $ctrl.coords -->

    <!-- ngIf: !$ctrl.ngDisabled && !$ctrl.ngReadonly -->
  </div>
"
`;

exports[`$rootScope.googleMapsApiKey [ng-disabled] [ng-model] 1`] = `
"
  <div class=\\"bm-location\\">
    <!-- ngIf: $ctrl.isEditing || $ctrl.coords -->

    <!-- ngIf: !$ctrl.ngDisabled && !$ctrl.ngReadonly -->
  </div>
"
`;

exports[`$rootScope.googleMapsApiKey [ng-model] [ng-readonly] 1`] = `
"
  <div class=\\"bm-location\\">
    <!-- ngIf: $ctrl.isEditing || $ctrl.coords -->

    <!-- ngIf: !$ctrl.ngDisabled && !$ctrl.ngReadonly -->
  </div>
"
`;

exports[`$rootScope.googleMapsApiKey [ng-model] 1`] = `
"
  <div class=\\"bm-location\\">
    <!-- ngIf: $ctrl.isEditing || $ctrl.coords -->

    <!-- ngIf: !$ctrl.ngDisabled && !$ctrl.ngReadonly --><div class=\\"bm-button-container bm-location__button-container ng-scope\\" ng-if=\\"!$ctrl.ngDisabled &amp;&amp; !$ctrl.ngReadonly\\">

      <!-- ngIf: $ctrl.isEditing -->
      <!-- ngIf: $ctrl.isEditing -->

      <!-- ngIf: !$ctrl.isEditing --><button type=\\"button\\" class=\\"bm-button bm-button-clear bm-location__button bm-location__button-clear ng-scope\\" ng-if=\\"!$ctrl.isEditing\\" ng-click=\\"$ctrl.onClear()\\">Clear</button><!-- end ngIf: !$ctrl.isEditing -->
      <!-- ngIf: !$ctrl.isEditing --><button type=\\"button\\" class=\\"bm-button bm-button-edit bm-location__button bm-location__button-edit ng-scope\\" ng-if=\\"!$ctrl.isEditing\\" ng-click=\\"$ctrl.onEdit()\\">Locate
      </button><!-- end ngIf: !$ctrl.isEditing -->

    </div><!-- end ngIf: !$ctrl.ngDisabled && !$ctrl.ngReadonly -->
  </div>
"
`;
